[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Art/Envirement/Town/KingsQuarters-Upgrade01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Buildings/BuildingsManager.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/Envirement/Town/KingsQuarters_NonUpgrade.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/UI/Scroll.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/UI/Button01-pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/UI/Button01.png" type="Texture" id=6]
[ext_resource path="res://Assets/MainTheme.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Art/Envirement/Town/BlacksmithsQuarters-NonUpgrade.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/Envirement/Town/BlacksmithsQuarters-Upgrade01.png" type="Texture" id=9]
[ext_resource path="res://Assets/IMPORTS/Lively NPCs - medieval_32x32/individual sprites/barkeep/barkeep_00.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sounds/Anvil Hit.mp3" type="AudioStream" id=11]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UpgradeButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpgradeText:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath("UpgradeButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpgradeText:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/path = NodePath("UpgradeButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpgradeText:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UpgradeButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpgradeText:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath("UpgradeButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpgradeText:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/path = NodePath("UpgradeButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpgradeText:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110, 21.125 )

[node name="Building" type="Node2D"]
script = ExtResource( 2 )

[node name="KingsQuarters" type="Node2D" parent="."]
visible = false

[node name="NoneUpgraded" type="Sprite" parent="KingsQuarters"]
visible = false
position = Vector2( 12, -131 )
texture = ExtResource( 3 )

[node name="Upgrade01" type="Sprite" parent="KingsQuarters"]
visible = false
position = Vector2( 12, -131 )
texture = ExtResource( 1 )

[node name="UpgradeScroll" type="Sprite" parent="KingsQuarters"]
visible = false
position = Vector2( 3, -97 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 4 )

[node name="UpgradeButton" type="TextureButton" parent="KingsQuarters/UpgradeScroll"]
margin_left = -25.8333
margin_top = -5.0
margin_right = 38.1667
margin_bottom = 35.0
rect_scale = Vector2( 0.694598, 0.823179 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )

[node name="UpgradeText" type="RichTextLabel" parent="KingsQuarters/UpgradeScroll"]
margin_left = -43.3333
margin_top = -12.5
margin_right = 75.6667
margin_bottom = 4.5
rect_scale = Vector2( 0.770838, 0.765804 )
mouse_filter = 2
theme = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Upgrade Kings Quarters"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="KingsQuarters/UpgradeScroll"]
playback_speed = 2.0
anims/RESET = SubResource( 3 )
anims/appear = SubResource( 2 )
anims/disappear = SubResource( 4 )

[node name="AmbientNoise" type="AudioStreamPlayer2D" parent="KingsQuarters"]
visible = false
position = Vector2( 0, 1 )
pitch_scale = 1.03
max_distance = 200.0

[node name="BlackSmithsQuarters" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 1 )

[node name="NoneUpgraded" type="Sprite" parent="BlackSmithsQuarters"]
visible = false
position = Vector2( 12, -131 )
texture = ExtResource( 8 )

[node name="Upgrade01" type="Sprite" parent="BlackSmithsQuarters"]
visible = false
position = Vector2( 12, -131 )
texture = ExtResource( 9 )

[node name="UpgradeScroll" type="Sprite" parent="BlackSmithsQuarters"]
visible = false
position = Vector2( 3, -97 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 4 )

[node name="UpgradeButton" type="TextureButton" parent="BlackSmithsQuarters/UpgradeScroll"]
margin_left = -25.8333
margin_top = -5.0
margin_right = 38.1667
margin_bottom = 35.0
rect_scale = Vector2( 0.694598, 0.823179 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )

[node name="UpgradeText" type="RichTextLabel" parent="BlackSmithsQuarters/UpgradeScroll"]
margin_left = -45.8333
margin_top = -15.8333
margin_right = 94.1667
margin_bottom = 1.16667
rect_scale = Vector2( 0.631613, 0.919605 )
mouse_filter = 2
theme = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Upgrade Blacksmiths Quarters"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlackSmithsQuarters/UpgradeScroll"]
playback_speed = 2.0
anims/RESET = SubResource( 5 )
anims/appear = SubResource( 6 )
anims/disappear = SubResource( 7 )

[node name="NPC" type="Sprite" parent="BlackSmithsQuarters"]
visible = false
position = Vector2( 45, 34 )
scale = Vector2( 1.60276, 1.77553 )
texture = ExtResource( 10 )

[node name="AmbientNoise" type="AudioStreamPlayer2D" parent="BlackSmithsQuarters"]
visible = false
stream = ExtResource( 11 )
volume_db = -20.0
pitch_scale = 0.9
max_distance = 200.0

[node name="BuildingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingArea"]
position = Vector2( 2, 23.875 )
shape = SubResource( 1 )

[connection signal="body_entered" from="BuildingArea" to="." method="_on_BuildingArea_body_entered"]
[connection signal="body_exited" from="BuildingArea" to="." method="_on_BuildingArea_body_exited"]
